--- a/index.html
+++ b/index.html
@@ -414,6 +414,35 @@
         </div>
     </section>
 
+    <!-- Footer -->
+    <section class="text-white">
+        <footer>
+            <ul class="icons" style="font-size: xx-large;">
+                <li>
+                    <a class="github" href="#"><i class="fab fa-github icon"></i></a>
+                </li>
+                <li>
+                    <a class="facebook" href="#">
+                        <i class="fab fa-facebook-f icon"></i></a>
+                </li>
+                <li>
+                    <a class="linkedin" href="#"><i class="fab fa-linkedin-in icon"></i></a>
+                </li>
+                <li>
+                    <a class="instagram" href="#"><i class="fab fa-instagram icon"></i></a>
+                </li>
+            </ul>
+            <ul class="menu">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">Contact Us</a></li>
+            </ul>
+            <div class="footer-copyright">
+                <p>Copyright @ 2023 All Rights Reserved.</p>
+            </div>
+        </footer>
+    </section>
 
 
 
@@ -446,6 +475,7 @@
         });
         observer.observe(skillsSection);
     </script>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 </body>
 
 </html>
