--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- navbar -->
     <nav class="navbar navbar-expand-md navbar-light bg-transparent sticky-top">
         <div class="container-fluid">
-            <a class="navbar-brand m-0 p-2 d-md-none d-lg-block" href="#">POOJAN</a>
+            <a class="navbar-brand m-0 p-2 d-md-none d-lg-block" href="#Home">POOJAN</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -91,9 +91,8 @@
                         <p class="fs-5 text-justify">When I'm not pushing pixels, you'll find me playing football or
                             working out in my room.
                         </p>
-                        <form action="POOJAN_PATEL.pdf" method="get">
-                            <button type="submit" class="slide mx-0">Download CV</button>
-                        </form>
+                        <button type="submit" onclick="window.open('POOJAN_PATEL.pdf')" class="slide mx-0">Download
+                            CV</button>
                     </div>
                 </div>
             </div>
