--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                 </div>
             </div>
             <div class="col-md-6">
-                <div class="container">
+                <div class="container mx-0">
                     <form method="post"
                         action="https://script.google.com/macros/s/AKfycbxOkdQbjoFMnd0xuLi_K9uyGPY_oO7MdmTYjZbHHTIgHvdVHZ4cR4H9rDvf_JRIQ_h0/exec">
                         <div class="form-group">
@@ -413,36 +413,38 @@
 
     <!-- Footer -->
     <section class="text-white">
-        <footer>
-            <ul class="icons" style="font-size: xx-large;">
-                <li>
-                    <a class="github" href="https://github.com/POOJAN311"><i class="fab fa-github icon"></i></a>
-                </li>
-                <li>
-                    <a class="facebook" href="https://www.facebook.com/poojan.patel.9883739?mibextid=ZbWKwL">
-                        <i class="fab fa-facebook-f icon"></i></a>
-                </li>
-                <li>
-                    <a class="linkedin" href="https://www.linkedin.com/in/poojan-patel02/"><i
-                            class="fab fa-linkedin-in icon"></i></a>
-                </li>
-                <li>
-                    <a class="instagram"
-                        href="https://www.instagram.com/invites/contact/?i=124fz3fw5xzbj&utm_content=hob7hf5"><i
-                            class="fab fa-instagram icon"></i></a>
-                </li>
-            </ul>
-            <ul class="menu">
-                <li><a href="#Home">Home</a></li>
-                <li><a href="#About">About</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#Projects">Projects</a></li>
-                <li><a href="#Contact">Contact Us</a></li>
-            </ul>
-            <div class="footer-copyright">
-                <p>Copyright @ 2023 All Rights Reserved.</p>
-            </div>
-        </footer>
+        <div class="container-fluid">
+            <footer>
+                <ul class="icons" style="font-size: xx-large;">
+                    <li>
+                        <a class="github" href="https://github.com/POOJAN311"><i class="fab fa-github icon"></i></a>
+                    </li>
+                    <li>
+                        <a class="facebook" href="https://www.facebook.com/poojan.patel.9883739?mibextid=ZbWKwL">
+                            <i class="fab fa-facebook-f icon"></i></a>
+                    </li>
+                    <li>
+                        <a class="linkedin" href="https://www.linkedin.com/in/poojan-patel02/"><i
+                                class="fab fa-linkedin-in icon"></i></a>
+                    </li>
+                    <li>
+                        <a class="instagram"
+                            href="https://www.instagram.com/invites/contact/?i=124fz3fw5xzbj&utm_content=hob7hf5"><i
+                                class="fab fa-instagram icon"></i></a>
+                    </li>
+                </ul>
+                <ul class="menu">
+                    <li><a href="#Home">Home</a></li>
+                    <li><a href="#About">About</a></li>
+                    <li><a href="#skills">Skills</a></li>
+                    <li><a href="#Projects">Projects</a></li>
+                    <li><a href="#Contact">Contact Us</a></li>
+                </ul>
+                <div class="footer-copyright">
+                    <p>Copyright @ 2023 All Rights Reserved.</p>
+                </div>
+            </footer>
+        </div>
     </section>
 
 
